refactor: change retrieve(), langchain based to low level

--- a/notebooks/eda.ipynb
+++ b/notebooks/eda.ipynb
@@ -945,11 +945,155 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
    "id": "2b76f0df",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "import random\n",
+    "\n",
+    "queries_size = len(train_df)\n",
+    "\n",
+    "random_indices = random.sample(range(queries_size), 5)\n",
+    "queries = train_df.iloc[random_indices]['question']"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 32,
+   "id": "814b384a",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "wikis = wiki_df\n",
+    "titles = wikis['title'].tolist()\n",
+    "texts = wikis['text'].tolist()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 33,
+   "id": "fec9058c",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from rank_bm25 import BM25Okapi\n",
+    "from kiwipiepy import Kiwi\n",
+    "\n",
+    "kiwi = Kiwi()\n",
+    "\n",
+    "def kiwi_tokenizer(text: str) -> list[str]:\n",
+    "    \"\"\"\n",
+    "    형태소의 품사가 명사, 동사, 형용사 등인 형태소만 추출\n",
+    "\n",
+    "    Args:\n",
+    "        text (str): 원본 text\n",
+    "\n",
+    "    Returns:\n",
+    "        list[str]: 추출된 형태소 Tokens\n",
+    "    \"\"\"\n",
+    "    tokens = kiwi.tokenize(text)\n",
+    "    return [\n",
+    "        t.form for t in tokens if t.tag.startswith(\"N\") or t.tag.startswith(\"V\")\n",
+    "    ]\n",
+    "\n",
+    "tokenized_corpus = [\n",
+    "    kiwi_tokenizer(tit + \" \" + txt)\n",
+    "    for tit, txt in zip(titles, texts)\n",
+    "]\n",
+    "bm25 = BM25Okapi(corpus=tokenized_corpus)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 34,
+   "id": "92bf1258",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Sparse 검색 중...\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "BM25: 100%|██████████| 5/5 [00:00<00:00, 11.49it/s]\n"
+     ]
+    }
+   ],
+   "source": [
+    "from tqdm import tqdm\n",
+    "\n",
+    "print(\"Sparse 검색 중...\")\n",
+    "bm25_scores_list = []\n",
+    "bm25_indices_list = []\n",
+    "topk = 10\n",
+    "\n",
+    "for query in tqdm(queries, desc=\"BM25\"):\n",
+    "    tokenized_query = kiwi_tokenizer(query)\n",
+    "    scores = bm25.get_scores(tokenized_query)\n",
+    "\n",
+    "    # Top-k 인덱스만 뽑아옵니다.\n",
+    "    topk_indices = np.argsort(scores)[::-1][:topk]\n",
+    "    bm25_scores_list.append(scores[topk_indices])\n",
+    "    bm25_indices_list.append(topk_indices)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 43,
+   "id": "43af794a",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[array([43.28253481, 35.63893038, 35.04561624, 32.98307958, 32.47277175,\n",
+       "        32.4187475 , 31.61467891, 31.44212219, 31.27091665, 31.24357552]),\n",
+       " array([32.42917265, 19.38012324, 19.28399643, 19.11885162, 17.9103011 ,\n",
+       "        17.33369358, 16.82450221, 16.11847761, 16.11847761, 15.71776075]),\n",
+       " array([20.19827415, 20.19827415, 20.19006704, 20.19006704, 19.86072422,\n",
+       "        19.86072422, 19.67692247, 19.50590355, 19.50590355, 19.16319254]),\n",
+       " array([20.29876523, 12.25706576, 11.14472337, 10.34498847,  9.35285099,\n",
+       "         7.89845041,  7.80822883,  7.73633036,  7.69618165,  7.67759654]),\n",
+       " array([38.04958597, 38.04958597, 27.84284255, 27.84284255, 25.63378319,\n",
+       "        25.59938751, 18.97205516, 18.45155477, 18.21191944, 18.05960384])]"
+      ]
+     },
+     "execution_count": 43,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "bm25_scores_list"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 45,
+   "id": "d0572245",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[(3, 43.1), (1, 23.3), (2, 21.2)]"
+      ]
+     },
+     "execution_count": 45,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "d = {1: 23.3, 2: 21.2, 3:43.1}\n",
+    "sorted(d.items(), key=lambda x: x[1], reverse=True)"
+   ]
   }
  ],
  "metadata": {
