fix: Before Fix chunking and add reranking

--- a/notebooks/eda_docs.ipynb
+++ b/notebooks/eda_docs.ipynb
@@ -141,6 +141,27 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 78,
+   "id": "6e4a4545",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "682"
+      ]
+     },
+     "execution_count": 78,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "(wiki_pd['text'].str.len() > 3000).sum()"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 29,
    "id": "1b5aa387",
    "metadata": {},
