build: add dependency

--- a/notebooks/eda_train_data.ipynb
+++ b/notebooks/eda_train_data.ipynb
@@ -2,19 +2,10 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 10,
    "id": "6acc0408",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/home/wuhyun/competition/ODQA/QDQA_0.1/.venv/lib/python3.10/site-packages/tqdm/auto.py:21: TqdmWarning: IProgress not found. Please update jupyter and ipywidgets. See https://ipywidgets.readthedocs.io/en/stable/user_install.html\n",
-      "  from .autonotebook import tqdm as notebook_tqdm\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import pandas as pd\n",
     "import numpy as np\n",
@@ -43,7 +34,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 7,
    "id": "6ba1366a",
    "metadata": {},
    "outputs": [],
@@ -51,6 +42,7 @@
     "data_path = \"../raw/data/\"\n",
     "\n",
     "train_path = \"train_dataset/train/dataset.arrow\"\n",
+    "vaild_path = \"train_dataset/validation/dataset.arrow\"\n",
     "test_path = \"test_dataset/validation/dataset.arrow\"\n",
     "docs_path = \"wikipedia_documents.json\"\n",
     "\n",
@@ -62,6 +54,76 @@
     "# Pandas DataFrame으로 변환\n",
     "train_df = train_df.to_pandas()\n",
     "test_df = test_df.to_pandas()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "id": "1afce7ee",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "vaildation_df = Dataset.from_file(os.path.join(data_path, vaild_path))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "id": "2b912af3",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Dataset({\n",
+       "    features: ['title', 'context', 'question', 'id', 'answers', 'document_id', '__index_level_0__'],\n",
+       "    num_rows: 240\n",
+       "})"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "vaildation_df"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "id": "ac8a6857",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(DatasetDict({\n",
+       "     train: Dataset({\n",
+       "         features: ['title', 'context', 'question', 'id', 'answers', 'document_id', '__index_level_0__'],\n",
+       "         num_rows: 3952\n",
+       "     })\n",
+       "     validation: Dataset({\n",
+       "         features: ['title', 'context', 'question', 'id', 'answers', 'document_id', '__index_level_0__'],\n",
+       "         num_rows: 240\n",
+       "     })\n",
+       " }),\n",
+       " DatasetDict({\n",
+       "     validation: Dataset({\n",
+       "         features: ['question', 'id'],\n",
+       "         num_rows: 600\n",
+       "     })\n",
+       " }))"
+      ]
+     },
+     "execution_count": 14,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "load_from_disk(\"../raw/data/train_dataset\"), load_from_disk(\"../raw/data/test_dataset\")"
    ]
   },
   {
