feat: running script txt

--- a/notebooks/eda_train_data.ipynb
+++ b/notebooks/eda_train_data.ipynb
@@ -2,10 +2,19 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 1,
    "id": "6acc0408",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/home/wuhyun/competition/ODQA/QDQA_0.1/.venv/lib/python3.10/site-packages/tqdm/auto.py:21: TqdmWarning: IProgress not found. Please update jupyter and ipywidgets. See https://ipywidgets.readthedocs.io/en/stable/user_install.html\n",
+      "  from .autonotebook import tqdm as notebook_tqdm\n"
+     ]
+    }
+   ],
    "source": [
     "import pandas as pd\n",
     "import numpy as np\n",
@@ -34,7 +43,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 3,
    "id": "6ba1366a",
    "metadata": {},
    "outputs": [],
@@ -58,7 +67,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 4,
    "id": "1afce7ee",
    "metadata": {},
    "outputs": [],
@@ -68,7 +77,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 5,
    "id": "2b912af3",
    "metadata": {},
    "outputs": [
@@ -81,7 +90,7 @@
        "})"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -92,7 +101,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 6,
    "id": "ac8a6857",
    "metadata": {},
    "outputs": [
@@ -117,7 +126,7 @@
        " }))"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -128,7 +137,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 7,
    "id": "e75ce485",
    "metadata": {},
    "outputs": [
@@ -148,7 +157,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 8,
    "id": "8ee05122",
    "metadata": {},
    "outputs": [],
@@ -168,7 +177,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 9,
    "id": "149b893b",
    "metadata": {},
    "outputs": [
@@ -221,7 +230,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 10,
    "id": "79cc8707",
    "metadata": {},
    "outputs": [
@@ -282,7 +291,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 11,
    "id": "0e528a39",
    "metadata": {},
    "outputs": [
@@ -325,7 +334,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 12,
    "id": "5ff823f3",
    "metadata": {},
    "outputs": [
@@ -373,7 +382,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 13,
    "id": "d9d457a6",
    "metadata": {},
    "outputs": [
@@ -393,7 +402,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 14,
    "id": "7c0a505e",
    "metadata": {},
    "outputs": [],
@@ -403,7 +412,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 15,
    "id": "c6598916",
    "metadata": {},
    "outputs": [
@@ -457,7 +466,7 @@
          "type": "integer"
         }
        ],
-       "ref": "7aebfaaa-fcaf-475b-a80f-683eaeb61d6c",
+       "ref": "877d74b5-a170-4e0a-9b7b-8e7fef88fe6a",
        "rows": [
         [
          "0",
@@ -625,7 +634,7 @@
        "4   None  아오조라 문고   None  None            4  "
       ]
      },
-     "execution_count": 12,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -636,7 +645,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 16,
    "id": "419d71d8",
    "metadata": {},
    "outputs": [],
@@ -646,7 +655,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 17,
    "id": "28ef70af",
    "metadata": {},
    "outputs": [
@@ -715,7 +724,7 @@
          "type": "string"
         }
        ],
-       "ref": "c44671f9-1ecb-4217-a14b-6ff2081b466e",
+       "ref": "6d2acfe6-3feb-4e0a-8367-5f790386e403",
        "rows": [
         [
          "0",
@@ -930,7 +939,7 @@
        "4                548          4개            30     16        QUANTITY (수량)  "
       ]
      },
-     "execution_count": 14,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -941,7 +950,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 18,
    "id": "5ad3b3c6",
    "metadata": {},
    "outputs": [
@@ -975,7 +984,7 @@
          "type": "string"
         }
        ],
-       "ref": "e2c193af-3aad-4d90-a403-5640267e5290",
+       "ref": "2f05d125-4650-40a3-a46c-028929d2ef31",
        "rows": [
         [
          "0",
@@ -1099,7 +1108,7 @@
        "4        LOCATION (장소)  "
       ]
      },
-     "execution_count": 15,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1110,7 +1119,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 19,
    "id": "2b76f0df",
    "metadata": {},
    "outputs": [],
@@ -1125,7 +1134,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 20,
    "id": "814b384a",
    "metadata": {},
    "outputs": [],
@@ -1145,7 +1154,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 21,
    "id": "fec9058c",
    "metadata": {},
    "outputs": [],
@@ -1185,12 +1194,36 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 22,
    "id": "93edeca9",
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'tokenized_corpus' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[22], line 1\u001b[0m\n\u001b[0;32m----> 1\u001b[0m \u001b[43mtokenized_corpus\u001b[49m\n",
+      "\u001b[0;31mNameError\u001b[0m: name 'tokenized_corpus' is not defined"
+     ]
+    }
+   ],
+   "source": [
+    "tokenized_corpus"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 29,
+   "id": "38452424",
    "metadata": {},
    "outputs": [],
    "source": [
-    "tokenized_corpus"
+    "for elem in train_df['answers'].apply(lambda x:x['text']).values:\n",
+    "    if len(elem) > 1:\n",
+    "        print(\"?\")"
    ]
   },
   {
